[package]
name = "mqttmux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqttrs = "0.4"
bytes = "1.0"
tokio = { version = "1.8.3", features = ["full"] }
clap = "3.0.0-beta.2"
log = "0.4.14"
stderrlog = "0.5.1"

